# Paraxiom

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  myCustomSpec.json  network.toml  notes.txt  tatus
.devphase/: releases.json
.github/workflows/: build-and-test.yml  build.yml  clippy-and-fmt.yml  test.yml
common/: Cargo.toml  Paraxiom.code-workspace
common/src/: impls.rs
contracts/feed/: lib.rs
contracts/psp34/: Cargo.toml  lib.rs
crates/phactory/api/proto/: pruntime_rpc.proto
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/collator-selection/src/: lib.rs
pallets/offchain-rollup/: Cargo.toml
pallets/offchain-rollup/src/: anchor.rs  lib.rs  mock.rs  oracle.rs  types.rs
pallets/oracle/: Cargo.toml
pallets/oracle/src/: lib.rs  types.rs
pallets/para-democracy/: Cargo.toml
pallets/para-democracy/src/: lib.rs
pallets/para-oracle/: Cargo.toml
pallets/para-oracle/src/: lib.rs  weights.rs
pallets/psp34/: Cargo.toml
pallets/psp34/src/: lib.rs  mock.rs
pallets/registry/: Cargo.toml  lib.rs
pallets/registry/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/template/: Cargo.toml
parachains/chain-specs/: bridge-hub-kusama.json  oracle-rococo.json
parachains/runtimes/oracle/oracle-rococo/: Cargo.toml
parachains/runtimes/oracle/oracle-rococo/src/: lib.rs
phat/: .gitignore  Cargo.toml  Development.md  README.md  Sub0-Workshop.md  devphase.config.ts  package.json  tsconfig.json
phat-offchain-rollup/: commands
phat-offchain-rollup/phat/: devphase.config.ts
phat-offchain-rollup/phat/.devphase/: releases.json
phat-offchain-rollup/phat/artifacts/local_scheduler/: local_scheduler.contract  local_scheduler.wasm  metadata.json
phat-offchain-rollup/phat/openssl-1.1.1o/: Makefile  configdata.pm  libcrypto.pc  libcrypto.so.1.1  libssl.pc  openssl.pc  pod2htmd.tmp
phat-offchain-rollup/phat/openssl-1.1.1o/apps/: openssl
phat-offchain-rollup/phat/openssl-1.1.1o/crypto/: buildinf.h
phat-offchain-rollup/phat/openssl-1.1.1o/fuzz/: asn1-test  asn1parse-test  bignum-test  bndiv-test  client-test  cms-test  conf-test  crl-test  ct-test  server-test  x509-test
phat-offchain-rollup/phat/openssl-1.1.1o/test/: aborttest  afalgtest  asn1_decode_test  asn1_encode_test  asn1_internal_test  asn1_string_table_test  asn1_time_test  asynciotest  asynctest  bad_dtls_test  bftest  bio_callback_test  bio_enc_test  bio_memleak_test  bioprinttest  bntest  buildtest_c_aes  buildtest_c_asn1  buildtest_c_asn1t  buildtest_c_async  buildtest_c_bio  buildtest_c_blowfish  buildtest_c_bn  buildtest_c_buffer  buildtest_c_camellia  buildtest_c_cast  buildtest_c_cmac  buildtest_c_cms  buildtest_c_comp  buildtest_c_conf  buildtest_c_conf_api  buildtest_c_crypto  buildtest_c_ct  buildtest_c_des  buildtest_c_dh  buildtest_c_dsa  buildtest_c_dtls1  buildtest_c_e_os2  buildtest_c_ebcdic  buildtest_c_ec  (+142 more)
phat-offchain-rollup/phat/openssl-1.1.1o/tools/: c_rehash
phat-offchain-rollup/phat/tests/: substrate.test.ts  substrate.test.ts.tmp  substrate.test.ts.tmp2  substrate.test.ts.tmp3
phat-offchain-rollup/phat/typings/: SampleOracle.ts
phat/.devphase/: releases.json
phat/artifacts/phat_oracle/: phat_oracle.contract  phat_oracle.json  phat_oracle.wasm
phat/artifacts/phat_oracle_feed/: phat_oracle_feed.contract  phat_oracle_feed.json  phat_oracle_feed.wasm
phat/contracts/feed/: Cargo.toml  lib.rs  trait.rs
phat/contracts/phat_oracle/: Cargo.toml  lib.rs
phat/contracts/phat_oracle_feed/: Cargo.toml  lib.rs
phat/logics/: traits.rs
phat/tests/: feed.tests.ts  substrate.test.ts
phat/typings/: PhatOracle.ts  PhatOracleFeed.ts
polkadot-parachain/: Cargo.toml
polkadot-parachain/src/: command.rs  rpc.rs  service.rs
polkadot-parachain/src/chain_spec/: contracts.rs  mod.rs  oracle.rs
primitives/core/src/: lib.rs
primitives/parachain-inherent/: Cargo.toml
primitives/timestamp/: Cargo.toml
primitives/utility/: Cargo.toml
runtime/: Cargo.toml
runtime/paraxiom/: Cargo.toml
runtime/paraxiom/src/: contracts.rs  lib.rs  lib.rs.tmp
runtime/src/: lib.rs
scripts/: benchmarks.sh
scripts/bridge/: bridge.js  get_metadata.js  package-lock.json  package.json  schema.json
scripts/ci/gitlab/pipeline/: benchmarks.yml  build.yml
testnet/: network.toml  package.json
testnet/contracts/evm_transactor/: lib.rs
zombienet/examples/: oracle_rococo_local_network.toml
