[package]
name = "pallet-oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
primitive-types = { version = "0.12.1", default-features = false, features = ["codec", "byteorder"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false, optional = true }
log = { version = "0.4.14", default-features = false }
hex = { version = "0.4", default-features = false }
hex-literal = "0.4.1"

# Local
phat-offchain-rollup = { path = "../../pallets/offchain-rollup", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
frame-support-test = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
pink-kv-session = { git = "https://github.com/phala-network/phala-blockchain", tag = "nightly-2023-03-09" }
assert_matches = "1.4.0"

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"sp-core/std",
	"sp-application-crypto/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"log/std",
    "primitive-types/std",
	"phat-offchain-rollup/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks"
]
try-runtime = ["frame-support/try-runtime"]
