[package]
name = "psp34"
version = "1.0.0"
edition = "2021"
authors = ["Sylvain Cormier"]

[dependencies]

codec = { package = "parity-scale-codec", version = "3.2.0", features = ["derive"], default-features = false }


# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, "branch" = "polkadot-v0.9.37" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, "branch" = "polkadot-v0.9.37" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, "branch" = "polkadot-v0.9.37" }

ink = { version = "~4.0.0", default-features = false }


scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

# Include brush as a dependency and enable default implementation for PSP22 via brush feature
openbrush = { version = "2.2.0", default-features = false, features = ["psp34", "ownable"] }
pallet-assets-chain-extension = { git = "https://github.com/727-Ventures/pallet-assets-chain-extension", default-features = false, features = ["substrate"], branch = "polkadot-v0.9.37"  }



[dev-dependencies]
serde = { version = "1.0.132" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, "branch" = "polkadot-v0.9.37" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, "branch" = "polkadot-v0.9.37" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, "branch" = "polkadot-v0.9.37" }



[features]
default = ["std"]
std = [
    "sp-io/std",
    "codec/std",
    "ink/std",
    "scale-info/std",
    "frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
    "openbrush/std",
]
ink-as-dependency = [] 